--- a/src/assets/data/app.json
+++ b/src/assets/data/app.json
@@ -1,8 +1,8 @@
 {
-  "whatsappNumber": "+977 980 110 8407",
+  "whatsappNumber": "15879109422",
   "email": "baji724@gmail.com",
-  "phone": "https://t.me/VIPAgent_BAJI72",
+  "phone": "https://wa.me/15879109422",
   "facebook": "https://t.me/VIPAgent_BAJI72",
-  "telegram": "https://www.facebook.com/kirtipur.panga/"
+  "telegram": "https://www.facebook.com/kimngan.luu.5876/"
  
 }
