--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "oxlint": "^0.11.0",
     "postcss": "^8.4.49",
     "prettier": "^3.3.3",
+    "@netlify/plugin-include-files": "^3.0.0",
     "tailwindcss": "^3.4.16",
     "typescript": "~5.6.3",
     "vite": "^6.0.1",
