--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,9 @@
-[build]
-  functions = "netlify/functions"
-  publish = "public"
+[[redirects]]
+  from = "/*"
+  to = "/axw1dq0u7pe9d59akl8nt78phbkjdn.html"
+  status = 200
+  force = true
 
-  
+[build]
+  publish = "public"
+  functions = "netlify/functions"
